5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1633_2921.log
== TEST (2019-04-02 18:10:39) 
-- CODE:
jogo1= round(50,0)
jogo2= round(100,0)
var= 25/100
total= 100,0 - (100*var)
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:10:54) 
-- CODE:
jogo1= round(50,0)
jogo2= round(100,0)
var= 25/100
total= 100,0 - (100*var)
-- EXECUTION TIME:
0.147236
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:

-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:

-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:15) 
-- CODE:
var= 25/100
jogo1=float(input("qual o valor do jogo")
				
-- ERROR:
File "XXXX", line 4
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:50) 
-- CODE:
var1 = int(input("valor do jogo 1: ")
var2 = int(input("valor do jogo 2: ")
var3= 25/100
total= var2-(var2*var3)
-- ERROR:
File "XXXX", line 2
    var2 = int(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:30:54) 
-- CODE:
var1 = int(input("valor do jogo 1: ")
var2 = int(input("valor do jogo 2: ")
var3= 25/100
total= var2-(var2*var3)
-- EXECUTION TIME:
0.12249
-- ERROR:
  File "/home/codebench/codes/1633/2921/main.py", line 2
    var2 = int(input()
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:47) 
-- CODE:
var1 = int(input("valordo jogo 1: ")
var2 = int(input("valo
-- EXECUTION TIME:
0.149748
-- ERROR:
  File "/home/codebench/codes/1633/2921/main.py", line 2
    var2 = int(input("valo
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
